fixed .content33 spacing

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -194,7 +194,7 @@ img {
 .content33 {
 	display: inline-block;
 	margin: 2.5%;
-	width: 31%
+	width:28%;
 }
 /* css for contact infor */
 .contact {
